--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,6 +7,7 @@
     <link rel="canonical" href="{{ page | canonicalize }}">
 	</head>
 	<body>
-		{% block content %}{% endblock %}
+    {% include "partials/header.njk" %}
+		{{ content }}
 	</body>
 </html>
