--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -61,6 +61,19 @@ h4 {
   font-size: var(--font-size-md);
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+
 /* Layout container */
 .container {
   width: 100%;
