refactor: adjust background colors

--- a/src/static/css/var.css
+++ b/src/static/css/var.css
@@ -4,8 +4,10 @@
   --color-accent: rgb(201, 165, 97);
   --color-primary-contrast: rgb(255, 255, 255);
 
-  --color-bg: ;
-  --color-bg-alt: ;
+  --color-bg: rgb(250, 253, 255);
+  --color-bg-alt: rgb(228, 228, 238);
+  --color-backdrop: rgba(0,0,0,0.4);
+
   --color-border: rgb(192, 192, 200);
   
   --color-text: rgb(34, 34, 34);
