feat: basic header for mobile

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
     <link rel="stylesheet" href="/css/var.css">
     <link rel="stylesheet" href="/css/base.css">
+		<link rel="stylesheet" href="/css/header.css">
+		<script src="/js/header.js" defer></script>
     <link rel="canonical" href="{{ page | canonicalize }}">
 	</head>
 	<body>
