feat: include individual CSS sheets from template frontmatter

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,11 +10,15 @@
     <link rel="stylesheet" href="/css/var.css">
     <link rel="stylesheet" href="/css/base.css">
 		<link rel="stylesheet" href="/css/header.css">
+		{% for sheet in cssSheets %}
+		<link rel="stylesheet" href="/css/{{ sheet }}.css">
+		{% endfor %}
 		<script src="/js/header.js" defer></script>
     <link rel="canonical" href="{{ page | canonicalize }}">
 	</head>
 	<body>
     {% include "partials/header.njk" %}
-		{{ content }}
+
+		{% block content %}{% endblock %}
 	</body>
 </html>
