--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -40,6 +40,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 var(--spacing-sm);
+  font-family: Oxanium, Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
   color: var(--color-text);
   line-height: var(--line-height-tight);
