feat: include cta in examinations section

--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -38,6 +38,9 @@ cssSheets: ["home", "buttons", "sections"]
         </ul>
       </div>
       {% endfor %}
+      <div class="examintaions-cta">
+        <a class="btn btn-primary" href="{{ examinations.ctaPath }}">{{ examinations.ctaText }}</a>
+      </div>
     </div>
   </section>
 
