refactor: include section-cta style

--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -38,7 +38,7 @@ cssSheets: ["home", "buttons", "sections"]
         </ul>
       </div>
       {% endfor %}
-      <div class="examintaions-cta">
+      <div class="section-cta">
         <a class="btn btn-primary" href="{{ examinations.ctaPath }}">{{ examinations.ctaText }}</a>
       </div>
     </div>
@@ -71,7 +71,7 @@ cssSheets: ["home", "buttons", "sections"]
         <p>{{ paragraph }}</p>
         {% endfor %}
       </div>
-      <div class="plans-cta">
+      <div class="section-cta">
         <a class="btn btn-primary" href="{{ plans.ctaPath }}">{{ plans.ctaText }}</a>
       </div>
     </div>
