feat: new gap variables

--- a/src/static/css/var.css
+++ b/src/static/css/var.css
@@ -19,6 +19,7 @@
   --color-warning: #ef6c00;
   --color-danger:  #c62828;
 
+  /* Spacing and gaps */
   --spacing-xxs: 0.25rem;  /* 4px  */
   --spacing-xs: 0.5rem;   /* 8px  */
   --spacing-sm: 0.75rem;  /* 12px */
@@ -26,6 +27,10 @@
   --spacing-lg: 1.5rem;   /* 24px */
   --spacing-xl: 2rem;     /* 32px */
   --spacing-xxl: 3rem;     /* 48px */
+
+  --gap-sm: 8px;
+  --gap-md: 16px;
+  --gap-lg: 24px;
 
   /* Typography */
   --font-family-base: Montserrat, Helvetica, Arial, sans-serif;
@@ -97,8 +102,6 @@
 
   --viewport-min-width-desktop: 768px;
 }
-
-
 
 /* @media (min-width: 768px) {
   :root {
