--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -1,7 +1,7 @@
 ---
 title: Labex | Home
 permalink: "/"
-cssSheets: ["home", "buttons", "sections"]
+cssSheets: ["home", "buttons", "sections", "cards"]
 ---
 {% extends "layouts/base.njk" %}
 {% block content %}
@@ -73,6 +73,36 @@ cssSheets: ["home", "buttons", "sections"]
       </div>
       <div class="section-cta">
         <a class="btn btn-primary" href="{{ plans.ctaPath }}">{{ plans.ctaText }}</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="section differentiators">
+    <div class="container">
+      <div class="section-header">
+        <h1>{{ differentiators.title }}</h1>
+      </div>
+      <div class="section-content">
+        {% for paragraph in differentiators.intro %}
+        <p>{{ paragraph }}</p>
+        {% endfor %}
+        <div class="differentiators-cards">
+          {% for card in differentiators.cards %}
+          <div class="card">
+            <div class="differentiators-card-top">
+              <div class="differentiators-card-icon">
+                <img src="{{ card.imgSrc }}" alt="{{ card.imgAlt }}">
+              </div>
+              <div class="differentiators-card-title">
+                <h3 class="card-title">{{ card.title }}</h3>
+              </div>
+            </div>
+            <div class="differentiators-card-bottom">
+              <p class="card-text">{{ card.text }}</p>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
       </div>
     </div>
   </section>
