refactor: adjust paths for gh-pages deployment

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -2,7 +2,7 @@
   <div class="header-content">
 
     <div class="header-logo">
-      <img src="/img/logo-white-nomargin.svg" alt="Labex Medicina Diagnóstica">
+      <img src="img/logo-white-nomargin.svg" alt="Labex Medicina Diagnóstica">
     </div>
 
     <button class="header-toggle" aria-expanded="false" aria-controls="site-nav">
