--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -9,7 +9,7 @@ jsScripts: ["home"]
 
   <section class="hero">
     <video class="hero-video" autoplay muted loop playsinline>
-      <source src="/vid/labex-intro-video.mp4" type="video/mp4">
+      <source src="vid/labex-intro-video.mp4" type="video/mp4">
     </video>
     <div class="hero-overlay"></div>
     <div class="hero-content">
@@ -126,7 +126,7 @@ jsScripts: ["home"]
                 </div>
                 <div class="testimonials-quote-text">
                   {{ quote.text }}
-                  <img src="/icon/quote-right-solid-full.svg" alt="Ícone de aspas duplas à direita.">
+                  <img src="icon/quote-right-solid-full.svg" alt="Ícone de aspas duplas à direita.">
                 </div>
               </div>
               <div class="testimonials-quote-authorship">
