refactor: introduce baseurl site variable

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,16 +7,16 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/var.css">
-    <link rel="stylesheet" href="css/base.css">
-		<link rel="stylesheet" href="css/header.css">
-		<link rel="stylesheet" href="css/footer.css">
+		<link rel="stylesheet" href="{{ baseurl }}/css/var.css">
+		<link rel="stylesheet" href="{{ baseurl }}/css/base.css">
+		<link rel="stylesheet" href="{{ baseurl }}/css/header.css">
+		<link rel="stylesheet" href="{{ baseurl }}/css/footer.css">
 		{% for sheet in cssSheets %}
-		<link rel="stylesheet" href="css/{{ sheet }}.css">
+		<link rel="stylesheet" href="{{ baseurl }}/css/{{ sheet }}.css">
 		{% endfor %}
-		<script src="js/header.js" defer></script>
+		<script src="{{ baseurl }}/js/header.js" defer></script>
 		{% for script in jsScripts %}
-		<script src="js/{{ script }}.js" defer></script>
+		<script src="{{ baseurl }}/js/{{ script }}.js" defer></script>
 		{% endfor %}
     <link rel="canonical" href="{{ page | canonicalize }}">
 	</head>
