--- a/src/_includes/partials/results.njk
+++ b/src/_includes/partials/results.njk
@@ -8,7 +8,7 @@
         <div class="results-sticker">
           <div class="results-sticker-content">
             <div class="results-sticker-header">
-              <img src="img/logo-sticker.svg" alt="Logo da Labex.">
+              <img src="{{ baseurl }}/img/logo-sticker.svg" alt="Logo da Labex.">
               <p>ACESSE SEU LAUDO E IMAGENS DO EXAME</p>
             </div>
             <div class="results-sticker-info">
@@ -20,7 +20,7 @@
                 Senha: DDMMAAAA<br/>
               </div>
               <div class="results-sticker-qrcode">
-                <img src="img/qr-code.png" alt="QR-Code para o site da Labex.">
+                <img src="{{ baseurl }}/img/qr-code.png" alt="QR-Code para o site da Labex.">
               </div>
             </div>
           </div>
